--- a/style.css
+++ b/style.css
@@ -70,6 +70,28 @@ button:active{
     transition-duration: 0.1ms;
     background-color: #1a1a1b;
 }
+
+.operator:hover{
+    background-color: aqua;
+}
+
+.operator:active{
+    transition-duration: 0.1ms;
+    background-color: #1a1a1b;
+}
+
+#clear:hover, #delete:hover{
+    background-color: rgb(218, 102, 102);
+    color: black;
+    box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.5);
+}
+
+#clear:active, #delete:active{
+    transition-duration: 0.1ms;
+    background-color: #1a1a1b;
+}
+
+
 #equals{
     width: 124px;
 }
